# conan-workspace-example

./: README.md  conan-project.yml  conanws.yml  test.py
A/: conanfile.py
A/src/: CMakeLists.txt  hello.cpp  helloA.h  main.cpp
B/: conanfile.py
B/src/: CMakeLists.txt  hello.cpp  helloB.h
C/: conanfile.py
C/src/: CMakeLists.txt  hello.cpp  helloC.h
